Update archive documentation

--- a/docs/man/archive.1
+++ b/docs/man/archive.1
@@ -7,7 +7,7 @@
 .SH NAME
 archive \- work with archive and compressed files
 .SH SYNOPSIS
-.B alter
+.B archive
 .RI [ option ]
 .SH "DESCRIPTION"
 archive is part of the
